--- a/src/components/pages/Form/Form.scss
+++ b/src/components/pages/Form/Form.scss
@@ -3,11 +3,10 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  font-family: "Space Grotesk", sans-serif;
+  background: red !important;
 }
 
 .container {
-  background-color: #fff;
   border-radius: 3em;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: absolute;
@@ -32,23 +31,6 @@
 }
 
 .overlay {
-  // background: #ff416c;
-  // background: -webkit-linear-gradient(
-  //   to right,
-  //   rgb(2, 173, 116),
-  //   rgb(5, 43, 27)
-  // );
-  // background: linear-gradient(
-  //   22.88deg,
-  //   #5928e5 -2%,
-  //   rgba(43, 19, 111, 0.95361) 43.53%,
-  //   rgba(27, 12, 69, 0.937264) 75.97%,
-  //   rgba(6, 3, 15, 0.91) 98.63%
-  // );
-  // background-repeat: no-repeat;
-  // background-size: cover;
-  // background-position: 0 0;
-  color: #ffffff;
   position: relative;
   left: -100%;
   height: 100%;
@@ -91,12 +73,12 @@
 
 #signIn {
   background-color: transparent;
-  border-color: #ffffff;
+  border-color: var(--border-color)
 }
 
 #signUp {
   background-color: transparent;
-  border-color: #ffffff;
+  border-color: var(--border-color)
 }
 
 .container.right_panel_active {
