--- a/src/components/pages/Form/Globals.module.scss
+++ b/src/components/pages/Form/Globals.module.scss
@@ -5,8 +5,6 @@
 
 .h2 {
   text-align: center;
-  font-family: "Space Grotesk", sans-serif;
-
 }
 
 .p {
@@ -15,13 +13,11 @@
   line-height: 20px;
   letter-spacing: 0.5px;
   margin-bottom: 1em;
-  font-family: "Space Grotesk", sans-serif;
 }
 
 .span {
   font-size: 12px;
   font-weight: bold;
-  font-family: "Space Grotesk", sans-serif;
 }
 
 .a {
@@ -29,10 +25,10 @@
   font-size: 14px;
   text-decoration: none;
   margin: 15px 0;
-  font-family: "Space Grotesk", sans-serif;
 }
 
 .form {
+  border: 2px solid var(--border-color);
   background-color: #ffffff;
   display: flex;
   align-items: center;
@@ -41,15 +37,12 @@
   padding: 0 50px;
   height: 100%;
   text-align: center;
-  font-family: "Space Grotesk", sans-serif;
-
 }
 
 .input {
   background-color: #eee;
-  border: none;
+  border: 2px solid var(--border-color);
   padding: 12px 15px;
   margin: 8px 0;
   width: 100%;
-  font-family: "Space Grotesk", sans-serif;
 }
