--- a/src/components/pages/Form/shared/LoginRegister.scss
+++ b/src/components/pages/Form/shared/LoginRegister.scss
@@ -111,31 +111,24 @@
 
 .butonat {
   border: 0;
-  border-radius: 20px;
-  background-color: #5928e5;
-  color: #ffffff;
-  font-size: 12px;
-  font-weight: bold;
-  font-family: Integral CF;
+  border-radius: 100px;
+  background-color: var(--button-bg);
+  color: var(--button-text);
+  font-size: 1.1em;
+  font-weight: 900;
   padding: 12px 45px;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  transition: transform 80ms ease-in;
+  margin-top: .5em;
+  letter-spacing: .1px;
+  transition: transform all ease-in-out .3s;
   transition: 0.4s all ease;
 
   &:active {
     transform: scale(0.95);
   }
 
-  &:focus {
-    outline: none;
-  }
-
   &:hover {
     cursor: pointer;
-    background-color: #8159ee;
-    transition: 0.4s ease;
-    letter-spacing: 2px;
+    opacity: .7;
   }
 }
 
