--- a/src/components/pages/Home/Community/Community.module.scss
+++ b/src/components/pages/Home/Community/Community.module.scss
@@ -5,14 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 1em 3em;
-    margin-top: 3%;
-    margin-bottom: 7.5%;
-
-    @media screen and (max-width: 900px) {
-        flex-direction: column;
-        align-items: flex-end;
-        flex-direction: column;
-    }
+    // background: #F9F8F3;
 }
 
 .left {
@@ -23,29 +16,22 @@
     align-items: flex-start;
     margin-left: 2.5em;
 
-    @media screen and (max-width: 900px) {
-        justify-content: flex-start;
-        align-items: center;
-        width: 100%;
-        text-align: center;
-    }
+    // @media screen and (max-width: 900px) {
+    // }
 }
 
 .right {
     width: 50%;
-
-    @media screen and (max-width: 900px) {
-        width: 100%;
-    }
 }
 
 .title {
-    font-family: "Integral CF Demi";
     width: 80%;
-    color: #5928e5;
-    font-size: 2.75em;
-    letter-spacing: 1px;
+    font-weight: 900;
+    color: var(--text-color);
+    font-size: 3em;
+    letter-spacing: .5px;
     margin-top: 2.5%;
+    line-height: 1.1em;
     margin-bottom: 0.1em;
 
     @media screen and (max-width: 900px) {
@@ -55,11 +41,10 @@
 
 .description {
     width: 80%;
-    font-size: 1.2em;
-    font-family: "Space Grotesk", sans-serif;
+    font-size: 1.15em;
     margin: 0.6em 0em 0.9em 0em;
-    color: #1e0d4e;
-
+    color: var(--text-color);
+    
     @media screen and (max-width: 900px) {
         width: 90%;
         font-size: 1.18em;
