--- a/src/components/pages/Home/Features/Features.module.scss
+++ b/src/components/pages/Home/Features/Features.module.scss
@@ -4,9 +4,8 @@
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
-    padding: 1em 3em;
-    margin-top: 3%;
-    margin-bottom: 7.5%;
+    padding: 0em 3em 1em 3em;
+    margin-bottom: 6.5%;
 }
 
 .head{
@@ -17,14 +16,12 @@
 }
 
 .title{
-    font-family: "Integral CF Demi";
-    width: 55%;
+    font-weight: 900;
+    width: 60%;
     text-align: center;
-    color: #5928E5;
+    color: var(--text-color);
     font-size: 3em;
-    letter-spacing: 1px;
     margin-top: 2.5%;
-    margin-bottom: .1em;
 
     @media screen and (max-width: 900px) {
         font-size: 2.5em;
@@ -35,12 +32,10 @@
 }
 
 .description{
-    width: 50%;
-    font-size: 1.25em;
-    margin-top: .25em;
+    width: 60%;
+    font-size: 1.15em;
     text-align: center;
-    margin-bottom: 1.25em;
-
+    padding-bottom: 2em;
     @media screen and (max-width: 900px) {
         width: 100%;
         text-align: center;
@@ -71,17 +66,16 @@
 }
 
 .card_title{
-    font-family: "Integral CF Demi Bold";
     font-size: 1.65em;
-    color: #5928E5;
+    color: var(--text-color);
     margin-bottom: .2em;
 }
 
 .card_description{
-    font-size: 1.2em;
-    font-family: 'Space Grotesk', sans-serif;
+    width: 85%;
+    font-size: 1.1em;
     text-align: center;
-    color: #1e0d4e;
+    color: var(--text-color);
 }
 
 
