--- a/src/components/shared/Footer/Footer.module.scss
+++ b/src/components/shared/Footer/Footer.module.scss
@@ -1,9 +1,9 @@
 .container {
     width: 100%;
-    background: #5928e5;
     padding: 0em 3em;
     display: flex;
     flex-direction: column;
+    border-top: 2px solid var(--border-color)
 }
 
 .top {
@@ -20,7 +20,7 @@
 
 .bottom {
     display: flex;
-    border-top: 1px solid #ffffff10;
+    border-top: 2px solid var(--border-color);
     justify-content: center;
     padding: 0.5em 0em;
     align-items: center;
@@ -36,21 +36,22 @@
         align-items: center;
         padding-bottom: 2em;
         padding-top: 1.5em;
-        border-bottom: 1px solid #ffffff10;
+        border-bottom: 2px solid var(--border-color);
     }
 }
 
 .center {
     width: 33.33%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 
     @media screen and (max-width: 900px) {
         width: 100%;
         padding: 10% 0;
         padding-bottom: 2em;
-        border-bottom: 1px solid #ffffff10;
+        border-bottom: 2px solid var(--border-color);
         margin-bottom: 2em;
     }
 }
@@ -72,87 +73,93 @@
 }
 
 .smm_icon {
-    fill: #fff;
-    height: 2.25em;
-    padding: 0.25em;
-    border-radius: 100px;
+    fill: var(--icon-border);
+    height: 1.75em;
     cursor: pointer;
     transition: all ease-in-out 0.3s;
-    margin-right: 0.85em;
-}
 
-.smm_icon:hover {
-    background: #ffffff40;
-}
+    &:last-child{
+        margin-right: 0;
+    }
 
-.links {
-    font-family: "Integral CF Demi";
-    font-size: 1.5em;
-    color: #fff;
-    margin-bottom: 0.8em;
-
-    @media screen and (max-width: 900px) {
-        text-align: center;
+    &:hover{
+        opacity: .7;
     }
 }
 
+
+.links {
+    font-size: 1.5em;
+    color: var(--text-color);
+    margin-bottom: 0.8em;
+    font-weight: 900;
+}
+
 .copyright {
-    font-family: "Integral CF Demi Bold";
-    font-size: 1.25;
+    font-size: 1.1em;
+    font-weight: 500;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #ffffff;
+    color: var(--text-color);
 }
 
 .description {
-    font-size: 1.25em;
-    color: #ffffff;
+    font-size: 1.1em;
+    color: var(--text-color);
     letter-spacing: 0.1px;
     margin: 1em 0em;
+    font-weight: 500;
 }
 
 .newsletter_title {
-    font-family: "Integral CF Demi Bold";
     font-size: 1.5em;
-    color: #fff;
+    font-weight: 900;
+    color: var(--text-color);
     margin-bottom: 0.8em;
 }
+
 .contact_title {
-    font-family: "Integral CF Demi Bold";
     font-size: 1.5em;
-    color: #fff;
-    margin-bottom: 0.8em;
+    color: var(--text-color);
+    font-weight: 900;
 }
 
 .newsletter_input {
     width: 100%;
-    font-family: "Space Grotesk", sans-serif;
-    font-size: 1.15em;
-    padding: 0.65em 0.75em;
-    border-radius: 1em;
-    border: 0.5px solid white;
+    font-size: 1.1em;
+    padding: 0.65em 1em;
+    font-weight: 500;
+    border-radius: 100px;
+    font-family: 'Poppins';
+    background: transparent;
+    border: 2px solid var(--border-color);
     margin-right: 0.25em;
     transition: all ease-in-out 0.3s;
     cursor: pointer;
-
+    color: var(--text-color);
+    
     &:active {
-        border: 0.5px solid rgba(125, 99, 196, 0.314);
+        border: 2px solid var(--hover-color);
     }
 
     &:hover {
-        background: #f1f1f1;
+        background: var(--hover-color);
     }
 }
 
 .cta_wrapper {
     width: auto;
     display: flex;
-    margin-bottom: .5em;
+    align-items: center;
+    margin-top: .75em;
     transition: all ease-in-out 0.5s;
-    padding: 0.4em 0.5em;
     border-radius: 100px;
+
+    &:hover{
+        opacity: .7;
+    }
 
     @media screen and (max-width: 900px) {
         width: 100%;
@@ -167,58 +174,46 @@
     }
 }
 
-.cta_wrapper:hover {
-    background: #ffffff40;
-}
 
 .cta_svg {
-    fill: #fff;
-    height: 1.65em;
-    margin-right: 1em;
+    fill: var(--icon-border);
+    height: 1.3em;
 }
 
 .cta_name {
-    font-size: 1.15em;
-    color: #fff;
-    font-weight: 400;
+    font-size: 1.1em;
+    color: var(--text-color);
+    font-weight: 500;
+    letter-spacing: .1px;
+    margin-right: .75em;
 }
+
 .logo {
     height: 3em !important;
 }
 
 .links_flex {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
     flex-direction: column;
-
-    @media screen and (max-width: 900px) {
-        text-align: center;
-        justify-content: center;
-        align-items: center;
-    }
 }
 
 .testing {
     width: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
 }
 
 .link {
     width: 100%;
     padding: 0.3em 1em;
     margin-bottom: 0.1234em;
-    font-size: 1.2em;
-    color: #fff;
-    text-align: start;
-    border-radius: 100px;
+    font-size: 1.1em;
+    font-weight: 500;
+    color: var(--text-color);
     width: 100%;
-    margin-right: 3.34em;
     transition: all ease-in-out 0.5s;
-}
 
-.link:hover {
-    background: #ffffff40;
+    &:hover{
+        opacity: .7;
+    }
 }
