--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -50,6 +50,12 @@ body {
 .body{
   color: var(--text-color) !important;
   background: var(--background-important) !important;
+  width: 100vw;
+}
+.body-dash{
+  width: 100vw !important;
+  height: 100vh !important;
+  overflow-y: scroll;
 }
 
 #view_active {
@@ -85,13 +91,13 @@ body {
   background: #5928e570;
 }
 
-#globl {
-  width: 100%;
-  top: 0;
-  right: 0;
-  position: absolute;
-  z-index: 192349234239492394923432;
-}
+// #global {
+//   width: 100%;
+//   top: 0;
+//   right: 0;
+//   position: absolute;
+//   z-index: 192349234239492394923432;
+// }
 
 #nav-item{
   display: flex;
@@ -107,6 +113,7 @@ body {
       background: var(--hover-color);
   }
 }
+
 svg{
   z-index: 1 !important;
 }
