--- a/src/components/pages/Home/Hero/Hero.module.scss
+++ b/src/components/pages/Home/Hero/Hero.module.scss
@@ -15,12 +15,22 @@
 }
 
 .right {
-    height: 85vh;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 100vh;
+    height: 85vh !important;
+    width: 50% !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    position: relative !important;
+    overflow: hidden !important;
+    z-index: 1 !important;
+}
+
+.lottie{
+    display: absolute !important;
+    flex-shrink: 0 !important;
+    min-width: 100% !important;
+    min-height: 100% !important;
+    z-index: 1 !important;
 }
 
 .title {
