--- a/src/components/pages/Dashboard/Quizzes/Quizzes.module.scss
+++ b/src/components/pages/Dashboard/Quizzes/Quizzes.module.scss
@@ -241,7 +241,7 @@
     background: var(--background-important);
     border: 2px solid var(--border-color);
     border-right: 0px transparent solid;
-    font-family: "Space Grotesk", sans-serif;
+    font-family: "Poppins";
     color: var(--text-color);
 }
 
