--- a/src/components/pages/Play/Screen/Screen.module.scss
+++ b/src/components/pages/Play/Screen/Screen.module.scss
@@ -122,6 +122,7 @@
     height: 2em;
     color: var(--text-color);
     display: flex;
+    font-weight: 600;
     justify-content: center;
     align-items: center;
     width: 100%;
