--- a/src/components/shared/Global/global.scss
+++ b/src/components/shared/Global/global.scss
@@ -111,3 +111,18 @@ body {
     background: var(--hover-color);
   }
 }
+
+#nav-item-profile {
+  display: flex;
+  align-items: center;
+  padding: 0.75em;
+  border-radius: 0.75em;
+  margin-bottom: 0.5em;
+  transition: var(--animate);
+  position: relative;
+  cursor: pointer;
+
+  &:hover {
+    background: var(--hover-color);
+  }
+}
