--- a/src/components/pages/Dashboard/Bookmarks/Bookmarks.module.scss
+++ b/src/components/pages/Dashboard/Bookmarks/Bookmarks.module.scss
@@ -10,6 +10,16 @@
     color: var(--text-color);
 }
 
+.main_top {
+    margin-top: 2.5em;
+    display: flex;
+    justify-content: space-between;
+
+    @media screen and (max-width: 1000px) {
+        flex-direction: column;
+    }
+}
+
 .top_right {
     width: 100%;
     border-radius: 0.75em;
@@ -41,22 +51,6 @@
     position: relative;
 }
 
-.quiz_play {
-    font-size: 1em;
-    padding: 0.6em 1.5em;
-    background: var(--button-bg);
-    color: var(--button-text);
-    border-radius: 100px;
-    transition: all ease-in-out 0.3s;
-    cursor: pointer;
-    margin: 0.5em;
-    font-weight: 700;
-
-    &:hover {
-        opacity: 0.7;
-    }
-}
-
 .quiz_image {
     width: 100%;
     height: 25vh;
@@ -76,6 +70,30 @@
     color: var(--text-color);
 }
 
+.main_bottom {
+    margin-top: 2.5em;
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5em;
+
+    @media screen and (max-width: 1000px) {
+        margin-top: 0em;
+        flex-direction: column;
+    }
+}
+
+.bottom_left {
+    width: 48.6%;
+    border: 0.25px solid rgba(141, 141, 141, 0.085);
+    height: auto;
+    border-radius: 0.75em;
+
+    @media screen and (max-width: 1000px) {
+        width: 100%;
+        margin-bottom: 2em;
+    }
+}
+
 .quizer_holder {
     display: flex;
     align-items: center;
@@ -86,15 +104,41 @@
     font-size: 1em;
     margin-left: 0.5em;
     font-weight: bold;
-    color: var(--text-color);
+}
+
+.quizer_profile {
+    width: 32px;
+    border-radius: 100px;
+    border: 2px solid var(--purple);
+}
+
+.news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 1%;
+
+    overflow: scroll;
+    height: 50vh;
+}
+
+.user_wrapper {
+    display: flex;
+    flex-direction: column;
     cursor: pointer;
+}
+
+.quizer_name {
+    font-size: 1em;
+    margin-left: 0.5em;
+    font-weight: bold;
+    color: var(--text-color);
 }
 
 .quizer_profile {
     width: 32px;
     border-radius: 100px;
     border: 2px solid var(--border-color);
-    cursor: pointer;
 }
 
 .user_wrapper {
@@ -128,15 +172,61 @@
     font-size: 1.1em;
 }
 
-.user_points {
-    font-style: italic;
-    font-size: 0.95em;
-    color: rgb(133, 133, 133);
-}
-
 .your_quizzes {
     display: flex;
     flex-direction: column;
+}
+
+.your_quiz {
+    width: 100%;
+    background: rgba(245, 245, 245, 0.2);
+    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
+    margin-bottom: 1%;
+    padding: 0.5em;
+    display: flex;
+    justify-content: space-between;
+
+    &:last-child {
+        border-bottom: 0px;
+    }
+}
+
+.your_quiz_thumb {
+    width: 30%;
+    height: 90%;
+}
+
+.your_quiz_wrapper {
+    width: 70%;
+    display: flex;
+}
+
+.edit {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-right: 0.75em;
+}
+
+.edit_icon {
+    width: 2.6em;
+    margin-left: 0.7em;
+    padding: 0.5em;
+    background: rgba(147, 109, 254, 0.1);
+    border-radius: 2em;
+    border: 0.5px solid transparent;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
+
+    &:hover {
+        background: rgba(147, 109, 254, 0.2);
+        border: 0.5px solid var(--purple);
+    }
+}
+
+.end {
+    font-family: "Integral CF Demi Bold";
 }
 
 .search {
@@ -175,4 +265,109 @@
 .page_info {
     display: flex;
     align-items: center;
+}
+
+.add_btn {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 100px;
+    margin-left: 1em;
+    padding: .5em 1em;
+    background: var(--button-bg);
+
+    &:hover {
+        opacity: .8;
+    }
+}
+
+.add_btn_icon {
+    width: 2em;
+    margin-right: .5em;
+    fill: var(--button-text);
+    transition: 0.5s all ease-in-out;
+    cursor: pointer;
+}
+
+.testingit {
+    background-color: green;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 10vh;
+    background: green;
+}
+
+.actions_btn {
+    width: 1.7em;
+    fill: var(--icon-border);
+}
+
+.quiz_play {
+    padding: 0.15em;
+    border-radius: 100px;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 0.75em;
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+    &:last-child {
+        margin-bottom: 0em;
+    }
+}
+
+.actions_txt {
+    font-size: 1.05em;
+    margin-left: 0.5em;
+    font-weight: 400;
+    color: var(--text-color)
+}
+
+.dots {
+    width: 2.1em;
+    position: absolute;
+    top: 0.5em;
+    right: 0.5em;
+    background: var(--background-important);
+    padding: 0.25em;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.dots_dropdown {
+    position: absolute;
+    top: 9.5%;
+    width: 65%;
+    right: 0.5em;
+    padding: 0.5em;
+    background: var(--background-important);
+    border-radius: 0.75em;
+    box-shadow: -2px 2px 10px var(--button-bg);
+}
+
+.add_btn_txt{
+    font-size: 1.1em;
+    font-weight: 500;
+    margin-left: .25em;
+    padding-right: .85em;
+    color: var(--button-text) !important;
+}
+
+.emptystate{
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+}
+
+.emptystatelottie{
+    width: 320px !important;
 }
