--- a/src/components/pages/Dashboard/Contact/Contact.module.scss
+++ b/src/components/pages/Dashboard/Contact/Contact.module.scss
@@ -10,14 +10,10 @@
     color: var(--text-color);
 }
 
-.top_right {
+.bottom {
     width: 100%;
-    border-radius: 0.75em;
-
-    @media screen and (max-width: 1000px) {
-        width: 100%;
-        margin-bottom: 2em;
-    }
+    display: flex;
+    flex-direction: column;
 }
 
 .quizess {
@@ -28,110 +24,132 @@
     gap: 1em;
 }
 
-.quiz {
+.contact_info_wrapper {
     width: 100%;
-    border: 2px solid var(--border-color);
-    margin-bottom: 2%;
-    border-radius: 0.85em;
     display: flex;
-    margin-right: 2%;
     flex-direction: column;
-    justify-content: space-between;
-    background: var(--background-important);
-    position: relative;
-}
-
-.quiz_play {
-    font-size: 1em;
-    padding: 0.6em 1.5em;
-    background: var(--button-bg);
-    color: var(--button-text);
-    border-radius: 100px;
-    transition: all ease-in-out 0.3s;
-    cursor: pointer;
-    margin: 0.5em;
-    font-weight: 700;
-
-    &:hover {
-        opacity: 0.7;
-    }
-}
-
-.quiz_image {
-    width: 100%;
-    height: 25vh;
-    object-fit: cover;
-    border-radius: 0.85em 0.85em 0em 0em;
-}
-
-.quiz_title {
-    font-weight: 800;
-    font-size: 1.3em;
-    padding: 0.65em 0.65em 0em 0.65em;
-    color: var(--text-color);
-}
-
-.quiz_description {
-    padding: 0.3em 0.75em 0.75em 0.75em;
-    color: var(--text-color);
-}
-
-.quizer_holder {
-    display: flex;
+    justify-content: center;
     align-items: center;
-    padding: 0.5em;
+    height: 40vh;
+    background: var(--hover-color);
+    margin-bottom: 3em;
+    border-radius: 0.75em;
 }
 
-.quizer_name {
-    font-size: 1em;
-    margin-left: 0.5em;
-    font-weight: bold;
+.contact_title {
+    font-size: 2.5em;
     color: var(--text-color);
-    cursor: pointer;
 }
 
-.quizer_profile {
-    width: 32px;
-    border-radius: 100px;
-    border: 2px solid var(--border-color);
-    cursor: pointer;
+.contact_description {
+    font-size: 1.2em;
+    color: var(--text-color);
 }
 
-.user_wrapper {
+.contact_features_wrapper {
+    width: 100%;
+    margin-bottom: 3em;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    gap: 1em;
+}
+
+.contact_feature_box_wrapper {
+    width: 100%;
+    height: auto;
+    background: var(--hover-color);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 2em 1em;
+    border-radius: .75em;
+}
+
+.contact_feature_title{
+    margin-bottom: .5em;
+    font-size: 1.4em;
+    font-weight: 500;
+    color: var(--text-color)
+}
+
+.contact_feature_description{
+    font-size: 1.1em;
+    width: 75%;
+    letter-spacing: -.1px;
+    text-align: center;
+    color: var(--text-color)
+}
+
+.all_tickets_wrapper {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.user {
-    width: 100%;
-    background: rgba(245, 245, 245, 0.2);
-    border-bottom: 2px solid var(--border-color);
-    margin-bottom: 1%;
-    padding: 0.5em;
+.ticket_title {
+    width: 20%;
     display: flex;
-
-    &:last-child {
-        border-bottom: 0px;
-    }
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.5em;
+    color: var(--text-color)
 }
 
-.user_avatar {
-    width: 2.75em;
-    height: 2.75em;
-    border-radius: 99px;
-    border: 3px solid var(--border-color);
-    margin-right: 0.5em;
+.askedby {
+    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.25em;
+    color: var(--text-color)
 }
 
-.user_name {
-    font-weight: 500;
+.activity {
+    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.2em;
+    color: var(--text-color)
+}
+
+.priority {
+    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
     font-size: 1.1em;
+    color: var(--text-color);
 }
 
-.user_points {
-    font-style: italic;
-    font-size: 0.95em;
-    color: rgb(133, 133, 133);
+.state {
+    width: 20%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    font-size: 1.2em;
+    color: var(--text-color)
+
+}
+
+.ticket_wrapper {
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+    background: var(--hover-color);
+    margin-bottom: 0.5em;
+    border-radius: 0.75em;
+}
+
+.ticket_wrapper_info {
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+    font-size: .75em;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 
 .your_quizzes {
@@ -175,4 +193,34 @@
 .page_info {
     display: flex;
     align-items: center;
+}
+
+.add_btn {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 100px;
+    margin-left: 1em;
+    padding: 0.5em 1em;
+    background: var(--button-bg);
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+.add_btn_icon {
+    width: 2em;
+    margin-right: 0.5em;
+    fill: var(--button-text);
+    transition: 0.5s all ease-in-out;
+    cursor: pointer;
+}
+
+.add_btn_txt {
+    font-size: 1.1em;
+    font-weight: 500;
+    margin-left: 0.25em;
+    padding-right: 0.85em;
+    color: var(--button-text) !important;
 }
