--- a/src/components/pages/Dashboard/Quizzes/Quizzes.module.scss
+++ b/src/components/pages/Dashboard/Quizzes/Quizzes.module.scss
@@ -361,14 +361,17 @@
 
 .emptystate{
     width: 100%;
-    height: 85vh;
+    height: 72vh;
     display: flex;
     flex-direction: column;
-    justify-self: center;
+    justify-content: center;
     align-items: center;
-    // background: red;
 }
 
 .emptystatelottie{
     width: 320px !important;
+}
+
+.emptystatetitle{
+    color: var(--text-color)
 }
