--- a/src/components/pages/Dashboard/User/User.module.scss
+++ b/src/components/pages/Dashboard/User/User.module.scss
@@ -116,7 +116,8 @@
     width: 100%;
     height: 2px;
     background: var(--border-color);
-    margin: .6em 0em;
+    margin-top: .6em;
+    margin-bottom: 1em;
 }
 
 .tabname{
