--- a/src/components/pages/Dashboard/Welcome/Welcome.module.scss
+++ b/src/components/pages/Dashboard/Welcome/Welcome.module.scss
@@ -5,48 +5,48 @@
     flex-direction: column;
 }
 
-.mobile_only{
-    display: none;
-    @media screen and (max-width: 1000px) {
-        width: 100%;
-        height: 20vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 2.5%;
-        margin-bottom: 15%;
-    }
-}
-
 .welcome_text {
     font-weight: 800;
     color: var(--text-color);
 }
 
-.breadcrumb {
-    margin-top: 0.5em;
-    margin-left: 0.1em;
-    font-size: 1.15em;
+
+.quizess {
+    width: 100%;
+    overflow: scroll;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 1em;
 }
 
-.main {
-    display: flex;
-    flex-direction: column;
-}
-
-.main_top {
-    margin-top: 2.5em;
-    display: flex;
-    justify-content: space-between;
-
-    @media screen and (max-width: 1000px) {
-        flex-direction: column;
-    }
-}
-
-.top_left {
-    width: 49%;
+.quiz {
+    width: 100%;
     border: 2px solid var(--border-color);
+    margin-bottom: 2%;
+    border-radius: 0.85em;
+    display: flex;
+    margin-right: 2%;
+    flex-direction: column;
+    justify-content: space-between;
+    background: var(--background-important);
+    position: relative;
+}
+
+.quiz_title {
+    font-weight: 800;
+    font-size: 1.3em;
+    padding: 0.65em 0.65em 0em 0.65em;
+    color: var(--text-color);
+}
+
+.quiz_description {
+    padding: 0.3em 0.75em 0.75em 0.75em;
+    color: var(--text-color);
+}
+
+.bottom_left {
+    width: 48.6%;
+    border: 0.25px solid rgba(141, 141, 141, 0.085);
     height: auto;
     border-radius: 0.75em;
 
@@ -54,193 +54,300 @@
         width: 100%;
         margin-bottom: 2em;
     }
-
 }
 
-.top_right {
-    width: 49%;
-    border: 2px solid var(--border-color);
-    border-radius: 0.75em;
-}
-
-.top_right_title {
-    font-size: 1.2em;
-    padding: 0.35em 0.5em;
-    color: var(--text-color);
-    border-bottom: 2px solid var(--border-color);
-    font-weight: 800;
-}
-
-.quizess {
-    overflow: scroll;
-    height: 70vh;
-
-    display: grid;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
-    gap: .5em;
-    padding: .5em;
-}
-
-.quiz {
-    width: 100%;
-    height: auto;
-    border: 2px solid var(--border-color);
-    margin-bottom: 2%;
-    border-radius: 0.85em;
-}
-
-.quiz_play {
-    width: 93.5%;
-    font-weight: 600;
-    font-size: 0.85em;
-    padding: 0.6em 1.5em;
-    background: var(--button-bg);
-    color: var(--button-text);
-    border-radius: 100px;
-    border: 0;
-    transition: all ease-in-out 0.3s;
-    cursor: pointer;
-    margin: .5em;
-
-    &:hover {
-        opacity: 0.85;
-    }
-}
-
-.quiz_image{
-    max-width:100%;
-    height: auto;
-    border-radius: 0.85em 0.85em 0em 0em;
-}
-
-.quiz_title{
-    font-weight: 800;
-    font-size: .85em;
-    padding: .5em .5em 0em .5em;
-    color: var(--text-color)
-}
-
-.quiz_description{
-    font-size: .85em;
-    padding: .25em .5em .5em .6em;
-    color: var(--text-color)
-}
-
-.quizer_holder{
+.quizer_holder {
     display: flex;
     align-items: center;
-    padding: .5em;
+    padding: 0.5em;
 }
 
-.quizer_name{
-    font-size: .85em;
-    margin-left: .5em;
+.quizer_name {
+    font-size: 1em;
+    margin-left: 0.5em;
     font-weight: bold;
-    color: var(--text-color);
 }
 
-
-.quizer_profile{
+.quizer_profile {
     width: 32px;
     border-radius: 100px;
-    border: 2px solid var(--purple)
+    border: 2px solid var(--purple);
 }
 
-.user_wrapper{
+.user_wrapper {
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.user_wrapper {
     display: flex;
     flex-direction: column;
 }
 
-.user{
+.user {
     width: 100%;
     background: rgba(245, 245, 245, 0.2);
     border-bottom: 2px solid var(--border-color);
     margin-bottom: 1%;
-    padding: .5em;
+    padding: 0.5em;
     display: flex;
 
-    &:last-child{
+    &:last-child {
         border-bottom: 0px;
     }
 }
 
-.user_avatar{
+.user_avatar {
     width: 2.75em;
     height: 2.75em;
     border-radius: 99px;
-    border: 3px solid var(--purple);
-    margin-right: .5em;
+    border: 3px solid var(--border-color);
+    margin-right: 0.5em;
 }
 
-.user_name{
+.user_name {
     font-weight: 500;
-    font-size: 1.1em
+    font-size: 1.1em;
 }
 
-.user_points{
-    font-style: italic;
-    font-size: .95em;
-    color: rgb(133, 133, 133);
-}
-
-.your_quizzes{
+.your_quizzes {
     display: flex;
     flex-direction: column;
-
-    overflow: scroll;
-    height: 70vh;
 }
 
-.your_quiz{
+.your_quiz {
     width: 100%;
     background: rgba(245, 245, 245, 0.2);
-    border-bottom: 2px solid var(--border-color);
+    border-bottom: 0.25px solid rgba(141, 141, 141, 0.085);
     margin-bottom: 1%;
-    padding: .5em;
+    padding: 0.5em;
     display: flex;
     justify-content: space-between;
 
-    &:last-child{
+    &:last-child {
         border-bottom: 0px;
     }
 }
 
-.your_quiz_thumb{
+.your_quiz_thumb {
     width: 30%;
     height: 90%;
 }
 
-.your_quiz_wrapper{
+.your_quiz_wrapper {
     width: 70%;
     display: flex;
 }
 
-.edit{
+.edit {
     display: flex;
     height: 100%;
     justify-content: center;
     align-items: center;
-    margin-right: .75em;
+    margin-right: 0.75em;
 }
 
-.edit_icon{
+.edit_icon {
     width: 2.6em;
-    margin-left: .7em;
-    padding: .5em;
+    margin-left: 0.7em;
+    padding: 0.5em;
     background: rgba(147, 109, 254, 0.1);
     border-radius: 2em;
-    border: .5px solid transparent;
-    transition: all ease-in-out .3s;
+    border: 0.5px solid transparent;
+    transition: all ease-in-out 0.3s;
     cursor: pointer;
 
-
-    &:hover{
+    &:hover {
         background: rgba(147, 109, 254, 0.2);
-        border: .5px solid var(--purple);
+        border: 0.5px solid var(--purple);
     }
+}
+
+.end {
+    font-family: "Integral CF Demi Bold";
+}
+
+.search {
+    display: flex;
+    margin-left: 1em;
+}
+
+.search_input {
+    font-size: 1.15em;
+    padding: 0.69em 1em;
+    border-radius: 5em 0em 0em 5em;
+    background: var(--background-important);
+    border: 2px solid var(--border-color);
+    border-right: 0px transparent solid;
+    font-family: "Poppins";
+    color: var(--text-color);
+}
+
+.search_wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.69em 1em;
+    border-radius: 0em 5em 5em 0em;
+    background: var(--background-important);
+    border-top: 2px solid var(--border-color);
+    border-right: 2px solid var(--border-color);
+    border-bottom: 2px solid var(--border-color);
+    color: var(--text-color);
+}
+
+.search_icon {
+    fill: var(--icon-inside);
 }
 
 .page_info {
     display: flex;
     align-items: center;
+}
+
+.add_btn {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border-radius: 100px;
+    margin-left: 1em;
+    padding: 0.5em 1em;
+    background: var(--button-bg);
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+
+.add_btn_icon {
+    width: 2em;
+    margin-right: 0.5em;
+    fill: var(--button-text);
+    transition: 0.5s all ease-in-out;
+    cursor: pointer;
+}
+
+.testingit {
+    background-color: green;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 10vh;
+    background: green;
+}
+
+.actions_btn {
+    width: 1.7em;
+    fill: var(--icon-border);
+}
+
+.quiz_play {
+    padding: 0.15em;
+    border-radius: 100px;
+    transition: all ease-in-out 0.3s;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+
+    margin-bottom: 0.75em;
+
+    &:hover {
+        opacity: 0.7;
+    }
+
+    &:last-child {
+        margin-bottom: 0em;
+    }
+}
+
+.actions_txt {
+    font-size: 1.05em;
+    margin-left: 0.5em;
+    font-weight: 400;
+    color: var(--text-color);
+}
+
+.dots {
+    width: 2.1em;
+    position: absolute;
+    top: 0.5em;
+    right: 0.5em;
+    background: var(--background-important);
+    padding: 0.25em;
+    border-radius: 100%;
+    cursor: pointer;
+}
+
+.dots_dropdown {
+    position: absolute;
+    top: 9.5%;
+    width: 65%;
+    right: 0.5em;
+    padding: 0.5em;
+    background: var(--background-important);
+    border-radius: 0.75em;
+    box-shadow: -2px 2px 10px var(--button-bg);
+}
+
+.add_btn_txt {
+    font-size: 1.1em;
+    font-weight: 500;
+    margin-left: 0.25em;
+    padding-right: 0.85em;
+    color: var(--button-text) !important;
+}
+
+.emptystate {
+    width: 100%;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    // background: red;
+}
+
+.emptystatelottie {
+    width: 320px !important;
+}
+
+._main{
+    margin-top: 2.5em;
+    display: flex;
+    justify-content: space-between;
+}
+
+.main_left {
+    width: 69.5%;
+    border: 2px solid var(--border-color);
+    border-radius: .75em;
+    height: 82.5vh;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(1, 2fr));
+    gap: 1em;
+}
+
+.main_right {
+    width: 29.5%;
+    border: 2px solid var(--border-color);
+    border-radius: 5em;
+    height: 82.5vh;
+}
+
+
+.boxcont{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box{
+    width: 46%;
+    height: 49.5%;
+    border-radius: 5em;
+    background: red;
+
 }
